# simple_fastlio_localization

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: loc.rviz
launch/: run_online.launch  run_online.py
rviz/: loc.rviz
src/: localization_node.cpp
